# hackfax2024Backend

./: .gitignore  .pre-commit-config.yaml  CREDITS.md  LICENSING.md  README.md  pyproject.toml  setup.cfg
src/: app.ts  csvfile.csv  data.json  main.py
src/study_buddy_backend/: __init__.py  __main__.py
src/study_buddy_backend/application/main/: __init__.py
src/study_buddy_backend/tests/: __init__.py  studybuddy-backend_test.py
