#!/usr/bin/env python3
#
# Pyproject file for the Study Buddies project
#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 The Study Buddies
#
# Note: The programs and configurations used by this script may not be under the same license.
# Please check the LICENSING file in the root directory of this repository for more information.
#
# This script was created by The Study Buddies.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
