# Setup file for the sp-analyzer project
#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 The Cat Collective
#
# Note: The programs and configurations used by this script may not be under the same license.
# Please check the LICENSING file in the root directory of this repository for more information.
#
# This script was created by The Cat Collective.

[metadata]
name = GMU Study Buddies
version = 1.0.0
author = The Study Buddies
author_email = aryamanrajaputra@gmail.com, gshields@gmu.edu
description = This is the backend for the Study Buddies project created for the 2024 Hackfax Hackathon.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/the-cat-collective/hackathon/study-buddy-backend
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: APIs

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    pandas
    openai
    flask
    scikit-learn

[options.extras_require]
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx_rtd_theme
dev =
    pre-commit

[options.entry_points]
console_scripts =
    study_buddy_backend = study_buddy_backend:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
